--- a/aleph2_data_model/pom.xml
+++ b/aleph2_data_model/pom.xml
@@ -144,7 +144,16 @@
 		<artifactId>config</artifactId>
 		<version>1.3.0</version>
 	</dependency>
-	
+	<dependency>
+	    <groupId>org.functionaljava</groupId>
+	    <artifactId>functionaljava</artifactId>
+	    <version>4.2</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.functionaljava</groupId>
+	    <artifactId>functionaljava-java8</artifactId>
+	    <version>4.2</version>
+	</dependency>	
   	<dependency>
   		<groupId>org.mongodb</groupId>
   		<artifactId>mongo-java-driver</artifactId>
