--- a/aleph2_core_distributed_services_library/pom.xml
+++ b/aleph2_core_distributed_services_library/pom.xml
@@ -109,7 +109,7 @@
   	<dependency>
   		<groupId>com.typesafe.akka</groupId>
   		<artifactId>akka-actor_2.11</artifactId>
-  		<version>2.3.10</version>
+  		<version>2.4-M1</version>
   	</dependency>
   	<dependency>
   		<groupId>junit</groupId>
