--- a/aleph2_core_distributed_services_library/pom.xml
+++ b/aleph2_core_distributed_services_library/pom.xml
@@ -127,5 +127,20 @@
   		<artifactId>curator-recipes</artifactId>
   		<version>2.8.0</version>
   	</dependency>
+  	<dependency>
+  		<groupId>com.typesafe.akka</groupId>
+  		<artifactId>akka-cluster_2.11</artifactId>
+  		<version>2.4-M1</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>com.sclasen</groupId>
+  		<artifactId>akka-zk-cluster-seed_2.11</artifactId>
+  		<version>0.1.2</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>com.typesafe.akka</groupId>
+  		<artifactId>akka-cluster-tools_2.11</artifactId>
+  		<version>2.4-M1</version>
+  	</dependency>
   </dependencies>
 </project>
