--- a/aleph2_harvest_context_library/pom.xml
+++ b/aleph2_harvest_context_library/pom.xml
@@ -9,6 +9,7 @@
   </properties>
   <build>
     <sourceDirectory>src</sourceDirectory>
+    <testSourceDirectory>test</testSourceDirectory>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
