--- a/aleph2_data_model/pom.xml
+++ b/aleph2_data_model/pom.xml
@@ -219,5 +219,10 @@
   		<scope>test</scope>
   	</dependency>
   	 -->
+  	<dependency>
+  		<groupId>com.joestelmach</groupId>
+  		<artifactId>natty</artifactId>
+  		<version>0.11</version>
+  	</dependency>
   </dependencies>
 </project>
