--- a/aleph2_data_model/pom.xml
+++ b/aleph2_data_model/pom.xml
@@ -224,5 +224,10 @@
   		<artifactId>natty</artifactId>
   		<version>0.11</version>
   	</dependency>
+  	<dependency>
+  		<groupId>com.codepoetics</groupId>
+  		<artifactId>protonpack</artifactId>
+  		<version>1.4</version>
+  	</dependency>
   </dependencies>
 </project>
