--- a/aleph2_management_db_service/pom.xml
+++ b/aleph2_management_db_service/pom.xml
@@ -170,5 +170,11 @@
 		<artifactId>hadoop-common</artifactId>
 		<version>2.5.2</version>
 	</dependency>
+  	<dependency>
+  		<groupId>org.mockito</groupId>
+  		<artifactId>mockito-all</artifactId>
+  		<version>1.10.19</version>
+  		<scope>test</scope>
+  	</dependency>
   </dependencies>
 </project>
