--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ env:
  - TEST_DIR=aleph2_data_import_manager
 
 before_install:
- - cd test_dependencies && git checkout -b june_2015_release_inc_patches && cd ../aleph2_data_model && mvn install -DskipTests=true && cd ../aleph2_core_distributed_services_library && mvn install -DskipTests=true && cd ../test_dependencies/ && mvn install -DskipTests=true && cd ../
+ - cd test_dependencies && git pull origin june_2015_release_inc_patches && cd ../aleph2_data_model && mvn install -DskipTests=true && cd ../aleph2_core_distributed_services_library && mvn install -DskipTests=true && cd ../test_dependencies/ && mvn install -DskipTests=true && cd ../
 
 script: cd $TEST_DIR && mvn install -DskipTests=true && mvn test
 
