--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,7 @@ script: cd $TEST_DIR && mvn install -DskipTests=true && mvn test
 after_success:
  - mvn clean test jacoco:report coveralls:report
 
+# blacklist
+branches:
+  except:
+    - june_2015_release_inc_patches
