--- a/aleph2_data_import_manager/pom.xml
+++ b/aleph2_data_import_manager/pom.xml
@@ -166,6 +166,12 @@
   		<artifactId>hadoop-mapreduce-client-core</artifactId>
   		<version>2.5.2</version>
   	</dependency>
+	<dependency>
+		<groupId>org.apache.hadoop</groupId>
+		<artifactId>hadoop-minicluster</artifactId>
+		<version>2.4.0</version>
+		<scope>test</scope>
+		</dependency>
   	<dependency>
   		<groupId>com.google.inject</groupId>
   		<artifactId>guice</artifactId>
