--- a/aleph2_data_import_manager/pom.xml
+++ b/aleph2_data_import_manager/pom.xml
@@ -161,6 +161,11 @@
   		<artifactId>config</artifactId>
   		<version>1.3.0-M2</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.apache.hadoop</groupId>
+  		<artifactId>hadoop-mapreduce-client-core</artifactId>
+  		<version>2.7.0</version>
+  	</dependency>
 	<dependency>
 		<groupId>org.apache.hadoop</groupId>
 		<artifactId>hadoop-minicluster</artifactId>
@@ -176,6 +181,11 @@
   		<groupId>org.apache.kafka</groupId>
   		<artifactId>kafka_2.10</artifactId>
   		<version>0.8.2.1</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.apache.hadoop</groupId>
+  		<artifactId>hadoop-client</artifactId>
+  		<version>2.7.0</version>
   	</dependency>
   <dependency>
 	<groupId>com.typesafe.akka</groupId>
