--- a/aleph2_data_import_manager/pom.xml
+++ b/aleph2_data_import_manager/pom.xml
@@ -209,7 +209,28 @@
   		<version>4.12</version>
   		<scope>test</scope>
   	</dependency>
-	
+	<dependency>
+  <groupId>org.apache.storm</groupId>
+  <artifactId>storm-core</artifactId>
+  <version>0.9.3</version>
+</dependency>
+  	<dependency>
+	<groupId>jline</groupId>
+	<artifactId>jline</artifactId>
+	<version>2.11</version>
+</dependency>
+<dependency>
+	<groupId>org.apache.storm</groupId>
+	<artifactId>storm-kafka</artifactId>
+	<version>0.9.5</version>
+</dependency>
+
+  	<dependency>
+  		<groupId>aleph2_storm_samples</groupId>
+  		<artifactId>aleph2_storm_samples</artifactId>
+  		<version>0.0.1-SNAPSHOT</version>
+  		<scope>test</scope>
+  	</dependency>
   </dependencies>
   
 </project>
