--- a/aleph2_data_import_manager/test/com/ikanow/aleph2/data_import_manager/analytics/actors/test_data_bucket_change.properties
+++ b/aleph2_data_import_manager/test/com/ikanow/aleph2/data_import_manager/analytics/actors/test_data_bucket_change.properties
@@ -26,6 +26,7 @@ service.CoreManagementDbService.interface=com.ikanow.aleph2.data_model.interface
 service.CoreManagementDbService.service=com.ikanow.aleph2.management_db.services.CoreManagementDbService
 service.SecurityService.interface=com.ikanow.aleph2.data_model.interfaces.shared_services.ISecurityService
 service.SecurityService.service=com.ikanow.aleph2.data_model.interfaces.shared_services.MockSecurityService
+#(Comment these out to get it to work from eclipse)
 service.StreamingEnrichmentService.interface=com.ikanow.aleph2.data_model.interfaces.data_analytics.IAnalyticsTechnologyService
 service.StreamingEnrichmentService.service=com.ikanow.aleph2.analytics.storm.services.MockStormAnalyticTechnologyService
 service.BatchEnrichmentService.interface=com.ikanow.aleph2.data_model.interfaces.data_analytics.IAnalyticsTechnologyService
